--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "area-restrita",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port $PORT --host 0.0.0.0",
-    "start": "vite preview --port $PORT --host 0.0.0.0"
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^1.13.1",
+    "express": "^4.19.2",
     "firebase": "^12.5.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
